--- a/index.html
+++ b/index.html
@@ -2,177 +2,276 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Tạo QR Nạp Tiền - VietQR</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PHẠM VĂN HOÀ BUID VIETQR NAPAS 247</title>
   <style>
     body {
-      background: #111;
-      color: #fff;
+      background: #f9f9f9;
+      color: #000;
       font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
       margin: 0;
+      transition: background 0.3s, color 0.3s;
+    }
+    body.dark-mode {
+      background: #111;
+      color: #fff;
     }
     .container {
-      background: #1c1c1c;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 25px rgba(0,0,0,0.8);
-      width: 420px;
+      background: #fff;
+      padding: 25px;
+      border-radius: 16px;
+      width: 100%;
+      max-width: 400px;
       text-align: center;
+      box-shadow: 0 4px 25px rgba(0,0,0,0.15);
+      transition: background 0.3s, color 0.3s;
+      box-sizing: border-box;
     }
+    body.dark-mode .container { background: #1c1c1c; }
     h2 {
       margin-bottom: 20px;
-      color: #00ff99;
-      text-transform: uppercase;
-      letter-spacing: 2px;
+      font-size: 18px;
+      letter-spacing: 1px;
+      color: #008000;
+      font-weight: bold;
+      text-shadow: 0 0 8px rgba(0,128,0,0.4);
     }
-    select, input {
+    .input-group {
+      position: relative;
+      margin-top: 18px;
+      text-align: left;
       width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: 2px solid #000;
-      border-radius: 8px;
-      background: #222;
-      color: #fff;
-      font-size: 16px;
-      box-sizing: border-box;
-      outline: none;
-      transition: 0.3s;
     }
-    select:focus, input:focus {
-      box-shadow: 0 0 15px #00ff99;
+    .input-group input, 
+    .input-group select {
+      width: 100%;
+      padding: 12px 14px;
+      border: 2px solid #ccc;
+      border-radius: 10px;
+      background: #fafafa;
+      font-size: 15px;
+      font-weight: 600;
+      color: #000;
+      caret-color: #006400;
+      transition: all 0.3s;
+      box-sizing: border-box;
+    }
+    .input-group input:focus,
+    .input-group select:focus {
+      border-color: #00b300;
+      box-shadow: 0 0 8px rgba(0,180,0,0.6);
+      background: #fff;
+      outline: none;
+    }
+    body.dark-mode .input-group input,
+    body.dark-mode .input-group select {
+      background: #000;
+      color: #fff;
+      border: 2px solid #444;
+    }
+    body.dark-mode .input-group input:focus,
+    body.dark-mode .input-group select:focus {
+      border-color: #00ff66;
+      box-shadow: 0 0 10px rgba(0,255,100,0.7);
+    }
+    .input-group label {
+      position: absolute;
+      left: 16px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: #666;
+      font-size: 15px;
+      pointer-events: none;
+      transition: 0.3s ease all;
+      background: transparent;
+      padding: 0 4px;
+    }
+    .input-group input:focus + label,
+    .input-group input:not(:placeholder-shown) + label {
+      top: -8px;
+      left: 12px;
+      font-size: 12px;
+      color: #008000;
+      font-weight: bold;
+      background: #fff;
+    }
+    body.dark-mode .input-group input:focus + label,
+    body.dark-mode .input-group input:not(:placeholder-shown) + label {
+      color: #00ff66;
+      background: #1c1c1c;
     }
     button {
       width: 100%;
       padding: 14px;
-      margin-top: 20px;
-      background: linear-gradient(145deg, #006600, #00cc00);
+      margin-top: 22px;
+      background: linear-gradient(90deg, #008000, #00b300);
       border: none;
-      border-radius: 8px;
-      font-size: 18px;
+      border-radius: 12px;
+      font-size: 17px;
       font-weight: bold;
       color: #fff;
       text-transform: uppercase;
       cursor: pointer;
-      position: relative;
-      overflow: hidden;
-    }
-    button::after {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: url('https://i.ibb.co/s65xLqf/crack-texture.png');
-      opacity: 0.3;
-      pointer-events: none;
-      mix-blend-mode: screen;
+      box-shadow: 0 4px 12px rgba(0,128,0,0.4);
+      transition: all 0.3s;
     }
     button:hover {
-      background: linear-gradient(145deg, #00cc00, #009900);
-      box-shadow: 0 0 20px #00ff99;
+      background: linear-gradient(90deg, #00b300, #00e600);
+      box-shadow: 0 0 20px rgba(0,255,0,0.7);
+      transform: translateY(-2px);
     }
-    #qrcode {
+    .mode-toggle {
+      margin-bottom: 20px;
+      cursor: pointer;
+      display: inline-block;
+      transition: transform 0.5s ease;
+    }
+    .mode-toggle.rotate-left { transform: rotate(-180deg); }
+    .mode-toggle.rotate-right { transform: rotate(180deg); }
+    #qrcode img {
       margin-top: 20px;
-    }
-    img {
-      margin-top: 15px;
-      border-radius: 12px;
-      border: 3px solid #00ff99;
-      width: 260px;
+      border-radius: 14px;
+      border: 3px solid #008000;
+      width: 100%;
+      max-width: 260px;
       height: auto;
+      box-shadow: 0 0 15px rgba(0,180,0,0.5);
+    }
+    @media (max-width: 750px) {
+      .container { padding: 18px; max-width: 350px; }
+      h2 { font-size: 16px; }
+      .input-group input, .input-group select { font-size: 14px; padding: 10px; }
+      button { font-size: 15px; padding: 12px; }
+      #qrcode img { max-width: 200px; }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2>Tạo QR Nạp Tiền</h2>
-    <select id="bank">
-      <option value="">-- Chọn Ngân Hàng --</option>
-      <option value="VCB">Vietcombank</option>
-      <option value="TCB">Techcombank</option>
-      <option value="ACB">ACB</option>
-      <option value="BIDV">BIDV</option>
-      <option value="MB">MB Bank</option>
-      <option value="VPB">VPBank</option>
-      <option value="HDB">HDBank</option>
-      <option value="VIB">VIB</option>
-      <option value="SHB">SHB</option>
-      <option value="OCB">OCB</option>
-      <option value="SCB">SCB</option>
-      <option value="MSB">MSB</option>
-      <option value="LPB">LienVietPostBank</option>
-      <option value="KLB">KienLongBank</option>
-      <option value="ABB">ABBANK</option>
-      <option value="PGB">PGBank</option>
-      <option value="PVcomBank">PVcomBank</option>
-      <option value="NAB">NamABank</option>
-      <option value="BacABank">BacABank</option>
-      <option value="SeABank">SeABank</option>
-      <option value="SaigonBank">SaigonBank</option>
-      <option value="OceanBank">OceanBank</option>
-      <option value="GPB">GPBank</option>
-      <option value="CBB">CBBank</option>
-      <option value="DongABank">DongABank</option>
-      <!-- Giả lập thêm nhiều ngân hàng để đủ ~100 -->
-      <option value="VRB">VRB</option>
-      <option value="UOB">UOB</option>
-      <option value="HSBC">HSBC</option>
-      <option value="CitiBank">CitiBank</option>
-      <option value="ANZ">ANZ</option>
-      <option value="DBS">DBS Bank</option>
-      <option value="StandardChartered">Standard Chartered</option>
-      <option value="PublicBank">Public Bank</option>
-      <option value="Shinhan">Shinhan Bank</option>
-      <option value="Woori">Woori Bank</option>
-      <option value="KEB">KEB Hana Bank</option>
-      <option value="IBK">IBK</option>
-      <option value="Kookmin">Kookmin Bank</option>
-      <option value="Mizuho">Mizuho</option>
-      <option value="SMBC">SMBC</option>
-      <option value="UFJ">MUFG</option>
-      <option value="Rakuten">Rakuten Bank</option>
-      <option value="Agribank">Agribank</option>
-      <option value="VietinBank">VietinBank</option>
-      <option value="Eximbank">Eximbank</option>
-      <option value="Sacombank">Sacombank</option>
-      <option value="LienViet">LienVietBank</option>
-      <option value="SaigonBank">SaigonBank</option>
-      <option value="Khac">Khác...</option>
-    </select>
-    <input type="text" id="account" placeholder="Số tài khoản">
-    <input type="text" id="name" placeholder="Tên tài khoản" style="text-transform: uppercase;">
-    <input type="text" id="amount" placeholder="Số tiền (vd: 100000)">
-    <input type="text" id="content" placeholder="Nội dung chuyển khoản">
-    <button onclick="generateQR()">Tạo QR</button>
+    <div class="mode-toggle" id="colorMode">
+      <svg class="color-mode" height="40" viewBox="0 0 400 400" width="40">
+        <circle cx="200" cy="200" fill="white" r="195" stroke="#000" stroke-width="10"></circle>
+        <path d="M 200 375 A 175 175 0 0 1 200 25"></path>
+        <path d="M 200 300 A 100 100 0 0 1 200 100" fill="#FFF"></path>
+        <path d="M 200 100 A 100 100 180 0 1 200 300"></path>
+      </svg>
+    </div>
+
+    <h2>PHẠM VĂN HOÀ BUID VIETQR NAPAS 247</h2>
+
+    <div class="input-group">
+      <select id="bank" required>
+        <option value="">-- Chọn Ngân Hàng --</option>
+        <option value="VCB">Vietcombank</option>
+        <option value="TCB">Techcombank</option>
+        <option value="ACB">ACB</option>
+        <option value="BIDV">BIDV</option>
+        <option value="MB">MB Bank</option>
+        <option value="VPB">VPBank</option>
+        <option value="HDB">HDBank</option>
+        <option value="VIB">VIB</option>
+        <option value="SHB">SHB</option>
+        <option value="SCB">SCB</option>
+        <option value="OCB">OCB</option>
+        <option value="ABB">ABBANK</option>
+        <option value="PGB">PGBank</option>
+        <option value="EIB">Eximbank</option>
+        <option value="SGB">Saigonbank</option>
+        <option value="BAB">Bac A Bank</option>
+        <option value="KLB">KienLongBank</option>
+        <option value="VRB">VRB</option>
+        <option value="GPB">GPBank</option>
+        <option value="SEAB">SeABank</option>
+        <option value="CBB">CBBank</option>
+      </select>
+    </div>
+
+    <div class="input-group">
+      <input type="text" id="account" placeholder=" " required>
+      <label for="account">Số tài khoản</label>
+    </div>
+
+    <div class="input-group">
+      <input type="text" id="name" placeholder=" " required>
+      <label for="name">Tên tài khoản</label>
+    </div>
+
+    <div class="input-group">
+      <input type="text" id="amount" placeholder=" " required>
+      <label for="amount">Số tiền (VND)</label>
+    </div>
+
+    <div class="input-group">
+      <input type="text" id="content" placeholder=" ">
+      <label for="content">Nội dung chuyển khoản</label>
+    </div>
+
+    <button id="generateBtn">Tạo QR</button>
     <div id="qrcode"></div>
+    <div id="download"></div>
   </div>
 
   <script>
+    const accountInput = document.getElementById('account');
+    const nameInput = document.getElementById('name');
     const amountInput = document.getElementById('amount');
-    amountInput.addEventListener('input', function(e) {
-      let value = e.target.value.replace(/,/g, '');
-      if (!isNaN(value) && value !== '') {
-        e.target.value = Number(value).toLocaleString('en-US');
-      }
+    const generateBtn = document.getElementById('generateBtn');
+    const qrcodeDiv = document.getElementById('qrcode');
+    const downloadDiv = document.getElementById('download');
+    const colorModeBtn = document.getElementById('colorMode');
+    const body = document.body;
+
+    // 👉 Số tài khoản: chữ + số, chữ in hoa
+    accountInput.addEventListener('input', e => {
+      e.target.value = e.target.value.toUpperCase().replace(/[^A-Z0-9]/g, "");
     });
 
-    function generateQR() {
-      let bank = document.getElementById('bank').value;
-      let account = document.getElementById('account').value;
-      let name = document.getElementById('name').value.toUpperCase();
-      let amount = document.getElementById('amount').value.replace(/,/g, '');
-      let content = document.getElementById('content').value;
+    // 👉 Tên tài khoản: chỉ chữ + khoảng trắng, in hoa
+    nameInput.addEventListener('input', e => {
+      e.target.value = e.target.value.replace(/[^A-Za-zÀ-ỹ\s]/g, "").toUpperCase();
+    });
 
-      if (!bank || !account || !name || !amount) {
+    // 👉 Số tiền: từ 0 đến vô hạn
+    amountInput.addEventListener('input', e => {
+      let rawValue = e.target.value.replace(/\D/g, "");
+      if (rawValue === "") { e.target.value = ""; return; }
+      let num = parseInt(rawValue);
+      e.target.value = num.toLocaleString('vi-VN');
+    });
+
+    // Dark/Light Mode
+    let isDark = false;
+    colorModeBtn.addEventListener('click', () => {
+      isDark = !isDark;
+      body.classList.toggle('dark-mode', isDark);
+      colorModeBtn.classList.remove('rotate-left', 'rotate-right');
+      colorModeBtn.classList.add(isDark ? 'rotate-right' : 'rotate-left');
+    });
+
+    // Generate QR
+    generateBtn.addEventListener('click', () => {
+      let bank = document.getElementById('bank').value;
+      let account = accountInput.value.trim();
+      let name = nameInput.value.trim();
+      let amount = amountInput.value.replace(/\D/g, "");
+      let content = document.getElementById('content').value.trim();
+
+      if (!bank || !account || !name || amount === "") {
         alert("Vui lòng nhập đủ thông tin!");
         return;
       }
 
-      let qrUrl = `https://img.vietqr.io/image/${bank}-${account}-compact2.png?amount=${amount}&addInfo=${encodeURIComponent(content)}&accountName=${encodeURIComponent(name)}`;
-      document.getElementById('qrcode').innerHTML = `<img src="${qrUrl}" alt="QR Code">`;
-    }
+      let numAmount = parseInt(amount);
+      if (isNaN(numAmount)) numAmount = 0;
+
+      let qrUrl = `https://img.vietqr.io/image/${bank}-${account}-compact2.png?amount=${numAmount}&addInfo=${encodeURIComponent(content)}&accountName=${encodeURIComponent(name)}`;
+      qrcodeDiv.innerHTML = `<img src="${qrUrl}" alt="QR Code">`;
+      downloadDiv.innerHTML = `<a href="${qrUrl}" download="vietqr.png">⬇️ Tải QR về máy</a>`;
+    });
   </script>
 </body>
 </html>
